overflow hidden on thoughtlets li in case urls are too long (not just urls, any text without breaking whitespace) [#237 state:resolved tagged:committed]

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -659,6 +659,10 @@ li.message {
 	height: 250px;
 }
 
+.thoughtlets li {
+	overflow: hidden;
+}
+
 .commentForm input,
 .commentForm textarea {
 	border: 1px solid #ccc;
